merging recent updates